deprecating passing option builder
when assembling command metadata